Fix gm and rubric view icon alignment.

--- a/styles.css
+++ b/styles.css
@@ -31,13 +31,16 @@
 }
 
 .tii_links_container .grade_icon {
-	font-size: 8px;
-	position: relative;
+	margin-right: 8px;
 }
 
 .tii_links_container .row_rubric_view {
     position: relative;
     top:4px;
+}
+
+.tii_links_container .row_rubric_view i {
+    line-height: 1 !important;
 }
 
 .tii_links_container .rubric_view_pp_launch {
